@@ -1,3 +1,8 @@
+2006-10-18  Daniel Jacobowitz  <dan@codesoucery.com>
+
+	* lib/gdbserver-support.exp (gdb_target_cmd): Anchor the ends
+	of patterns.
+
 2006-10-17  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* gdb.base/sepdebug.exp: Remove debug format test.
